# cloud-cv-challenge

./: .coverage  .coveragerc  .gitignore  CommentsOnChoices.md  README.md  packaged-dev.template  pyproject.toml
.github/workflows/: push-to-s3.yaml
app/: app.py  countsApi.yaml  dynamodb.py  sqs_queue.py
app/scripts/: full_test_deployment.sh  run_tests.sh  start_local_lambda.sh  test_api.sh  test_deploy.sh
app/src/: app.py  dynamodb.py  sqs_queue.py
app/tests/: app_test.py  client.py  event_apigateway.json  event_sqs.json  test_env.json
cdk/: .gitignore  cdk.context.json  cdk.json  package-lock.json  package.json
cdk/cf_functions/: redirectForSession.js
cdk/lib/: api-stack.ts  cdk-stack.ts  cf-functions.ts  distro-stack.ts  managed-bucket.ts  s3-distro.ts
cdk/lib/wrappers/: distro-wrapper.ts  domain-wrapper.ts
cdk/test/: distro-stack.test.ts
cloudFormation/: acm-certificate.yaml  buckets.yaml  cloudfront-site.yaml  counters.yaml  main.yaml  names.yaml  testApi.yaml
diary/: Day1-GithubActionsAndS3.md  Day2-Cloudfront.md  Day3-CloudFormation.md  Day4-VisitorCount.md  Day5-RefiningVisitorCount.md
notes/: cdk.md  cloudFormation-restapi-gateway.md  mdn-web-security.md  python-multiple-constructors.md
site/: 403.html  404.html  resume.html
site/notes/: github-actions.md
workflows/: push-to-s3.yaml
